added descriptons, titles, links, images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="shortcut icon" href="./assets/icons/иконка7.svg" />
     <script
       src="https://kit.fontawesome.com/566cb659aa.js"
       crossorigin="anonymous"
@@ -60,7 +61,21 @@
             />
           </div>
           <article class="about__text-section">
-            <p>About me</p>
+            <p>Привет, я Елизавета Кучерова, frontend разработчик из Москвы.<br><br>
+                Мне всегда были интересны технологии, и я пыталась найти работу, косвенно связанную с ними. Например, ранее я работала в тех. поддержке телеком компании Дом.ру.<br><br>
+                Обучаться веб-разработке я начала в 2018 году. Несколько месяцев учила PHP и JS, пока не остановилась на последнем. Меня больше привлекает фронтенд направление, так как мне нравится работать с визуальной частью и сразу наблюдать результат. Выбор языка JavaScript обусловили: большое комьюнити, кроссплатформенность, широкий спектр различных применений (подходит и для фронтенда, и для бекэнда, и для мобильной разработки, и для десктопных приложений, и для игр).<br><br>
+                Обучалась самостоятельно, по следующим ресурсам:<br><br>
+                <ul>
+                  <li><p>MDN</p></li>
+                  <li><p>GeekBrains</p></li>
+                  <li><p>FreeCodeCamp</p></li>
+                  <li><p>CodeWars</p></li>
+                  <li><p>Udemy</p></li>
+                  <li><p>учебник Кантора</p></li>
+                  <li><p>You don't know JS</p></li>
+                </ul><br>
+                За время обучения я научилась читать документацию и самостоятельно разбираться с проблемами. В дальнейшем планирую изучить React Native, и заняться созданием мобильных приложений, а также освоить бэкенд.<br><br>
+                В свободное время занимаюсь спортом или играю в видеоигры.</p>
           </article>
         </div>
       </section>
@@ -106,24 +121,24 @@
       <section id="projects">
         <h2 class="section-title">Проекты</h2>
         <div class="project">
-          <a class="project__container" href="/">
+          <a class="project__container" href="https://kucherl.github.io/rest-landing/">
             <img
               class="project__screenshot"
-              src="./assets/background__markus-spiske-unsplash.jpg"
+              src="./assets/rest-landing.jpg"
               alt="project__screenshot"
             />
             <div class="project__about">
-              <h3 class="project__title">Project Title</h3>
-              <p class="project__description">Project Description</p>
+              <h3 class="project__title">Лэндинг ресторана</h3>
+              <p class="project__description">Полностью адаптивный лэндинг ресторана, подходит для мобильных устройств. Скрипты написаны на vanilla JS. Для стилей использован препроцессор Sass.</p>
             </div>
           </a>
           <div class="project__links">
-            <a href="/"
+            <a href="https://github.com/kucherL/rest-landing"
               ><img
                 src="./assets/icons/github-seeklogo.com.svg"
                 alt="github__logo"
             /></a>
-            <a href="/"
+            <a href="https://kucherl.github.io/rest-landing/"
               ><img
                 src="./assets/icons/iconfinder_Streamline-17_185037.svg"
                 alt="open-project__logo"
@@ -131,6 +146,31 @@
           </div>
         </div>
         <div class="project">
+          <a class="project__container" href="https://todo-list-c5bb2.firebaseapp.com/">
+            <img
+              class="project__screenshot"
+              src="./assets/toDoList.jpg"
+              alt="project__screenshot"
+            />
+            <div class="project__about">
+              <h3 class="project__title">ToDo List</h3>
+              <p class="project__description">После регистрации сайт позволяет составить свой список задач. Приложение написано на Реакте, а авторизация, добавление и удаление задач реализованы с помощью Firebase.</p>
+            </div>
+          </a>
+          <div class="project__links">
+            <a href="https://github.com/kucherL/toDoList"
+              ><img
+                src="./assets/icons/github-seeklogo.com.svg"
+                alt="github__logo"
+            /></a>
+            <a href="https://todo-list-c5bb2.firebaseapp.com/"
+              ><img
+                src="./assets/icons/iconfinder_Streamline-17_185037.svg"
+                alt="open-project__logo"
+            /></a>
+          </div>
+        </div>
+        <!-- <div class="project">
           <a class="project__container" href="/">
             <img
               class="project__screenshot"
@@ -154,50 +194,25 @@
                 alt="open-project__logo"
             /></a>
           </div>
-        </div>
-        <div class="project">
-          <a class="project__container" href="/">
-            <img
-              class="project__screenshot"
-              src="./assets/background__markus-spiske-unsplash.jpg"
-              alt="project__screenshot"
-            />
-            <div class="project__about">
-              <h3 class="project__title">Project Title</h3>
-              <p class="project__description">Project Description</p>
-            </div>
-          </a>
-          <div class="project__links">
-            <a href="/"
-              ><img
-                src="./assets/icons/github-seeklogo.com.svg"
-                alt="github__logo"
-            /></a>
-            <a href="/"
-              ><img
-                src="./assets/icons/iconfinder_Streamline-17_185037.svg"
-                alt="open-project__logo"
-            /></a>
-          </div>
-        </div>
+        </div> -->
       </section>
       <section id="contacts">
         <h2 class="section-title">Контакты</h2>
         <ul class="contacts__links">
           <li class="contact__link">
-            <a href="/"
+            <a href=""
               ><img src="./assets/icons/Linkedin.svg" alt="linkedin-logo"
             /></a>
           </li>
           <li class="contact__link">
-            <a href="/"
+            <a href="https://github.com/kucherL"
               ><img
                 src="./assets/icons/github-seeklogo.com.svg"
                 alt="github-logo"
             /></a>
           </li>
           <li class="contact__link">
-            <a href="/"
+            <a href=""
               ><img
                 src="./assets/icons/google-gmail-seeklogo.com.svg"
                 alt="gmail-logo"
