fixed errors and changed photo

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
           <div class="photo-border">
             <img
               class="about__photo"
-              src="./assets/EqlxihJnwko.jpg"
+              src="./assets/profile-photo.jpg"
               alt="photo"
             />
           </div>
-          <article class="about__text-section">
+          <div class="about__text-section">
             <p>
               <span class="translation"
                 >Hi, I'm a self-taught frontend developer from Moscow. Interest
@@ -107,14 +107,14 @@
               <a
                 target="_blank"
                 rel="noopener noreferrer"
-                href="https://www.codewars.com/"
+                href="https://www.codewars.com/users/kucherLiz"
                 >Codewars</a
               >
               <span class="translation"
                 >), or do sport, or play video games.</span
               >
             </p>
-          </article>
+          </div>
         </div>
       </section>
       <section id="technologies">
@@ -161,12 +161,12 @@
         <h2 class="section-title translation">Certificates</h2>
         <ul class="certificates__gallery">
           <li class="certificates__gallery--item">
-            <figure>
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="https://www.freecodecamp.org/certification/lizardstail/responsive-web-design"
-              >
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.freecodecamp.org/certification/lizardstail/responsive-web-design"
+            >
+              <figure>
                 <img
                   src="./assets/certificates/FreeCodeCamp.Responsive_web_design.png"
                   alt="FreeCodeCamp.Responsive_web_design"
@@ -174,16 +174,16 @@
                 <figcaption class="translation">
                   FreeCodeCamp сourse сertificate. Responsive web design.
                 </figcaption>
-              </a>
-            </figure>
+              </figure>
+            </a>
           </li>
           <li class="certificates__gallery--item">
-            <figure>
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="https://www.freecodecamp.org/certification/lizardstail/javascript-algorithms-and-data-structures"
-              >
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.freecodecamp.org/certification/lizardstail/javascript-algorithms-and-data-structures"
+            >
+              <figure>
                 <img
                   src="./assets/certificates/FreeCodeCamp.JavaScript_algorithms_and_data_structures.png"
                   alt="FreeCodeCamp.JavaScript_algorithms_and_data_structures"
@@ -192,33 +192,33 @@
                   FreeCodeCamp сourse сertificate. JavaScript algorithms and
                   data structures.
                 </figcaption>
-              </a>
-            </figure>
+              </figure>
+            </a>
           </li>
           <li class="certificates__gallery--item">
-            <figure>
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="./assets/certificates/GeekBrains.Окончание курса.HTML&CSS.pdf"
-              >
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="./assets/certificates/GeekBrains.Окончание_курса.HTML&CSS.pdf"
+            >
+              <figure>
                 <img
-                  src="./assets/certificates/GeekBrains.Окончание курса.HTML&CSS.png"
+                  src="./assets/certificates/GeekBrains.Окончание_курса.HTML&CSS.png"
                   alt="GeekBrains.Окончание курса.HTML&CSS"
                 />
                 <figcaption class="translation">
                   GeekBrains сourse сertificate. HTML&CSS.
                 </figcaption>
-              </a>
-            </figure>
+              </figure>
+            </a>
           </li>
           <li class="certificates__gallery--item">
-            <figure>
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="./assets/certificates/GeekBrains.Окончание_курса.Алгоритмы_и_струтуры_данных_на_PHP.pdf"
-              >
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="./assets/certificates/GeekBrains.Окончание_курса.Алгоритмы_и_струтуры_данных_на_PHP.pdf"
+            >
+              <figure>
                 <img
                   src="./assets/certificates/GeekBrains.Окончание_курса.Алгоритмы_и_струтуры_данных_на_PHP.png"
                   alt="GeekBrains.Окончание_курса.Алгоритмы_и_струтуры_данных_на_PHP"
@@ -227,16 +227,16 @@
                   GeekBrains сourse сertificate. PHP algorithms and data
                   structures.
                 </figcaption>
-              </a>
-            </figure>
+              </figure>
+            </a>
           </li>
           <li class="certificates__gallery--item">
-            <figure>
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="./assets/certificates/GeekBrains.Окончание_курса.Базовый_курс_JavaScript.pdf"
-              >
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="./assets/certificates/GeekBrains.Окончание_курса.Базовый_курс_JavaScript.pdf"
+            >
+              <figure>
                 <img
                   src="./assets/certificates/GeekBrains.Окончание_курса.Базовый_курс_JavaScript.png"
                   alt="GeekBrains.Окончание_курса.Базовый_курс_JavaScript"
@@ -244,16 +244,16 @@
                 <figcaption class="translation">
                   GeekBrains сourse сertificate. Basic JavaScript.
                 </figcaption>
-              </a>
-            </figure>
+              </figure>
+            </a>
           </li>
           <li class="certificates__gallery--item">
-            <figure>
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="./assets/certificates/GeekBrains.Окончание_курса.Введение_в_Git.pdf"
-              >
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="./assets/certificates/GeekBrains.Окончание_курса.Введение_в_Git.pdf"
+            >
+              <figure>
                 <img
                   src="./assets/certificates/GeekBrains.Окончание_курса.Введение_в_Git.png"
                   alt="GeekBrains.Окончание_курса.Введение_в_Git"
@@ -261,16 +261,16 @@
                 <figcaption class="translation">
                   GeekBrains сourse сertificate. Introduction to Git.
                 </figcaption>
-              </a>
-            </figure>
+              </figure>
+            </a>
           </li>
           <li class="certificates__gallery--item">
-            <figure>
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="./assets/certificates/GeekBrains.Окончание_курса.Командная_разработка.pdf"
-              >
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="./assets/certificates/GeekBrains.Окончание_курса.Командная_разработка.pdf"
+            >
+              <figure>
                 <img
                   src="./assets/certificates/GeekBrains.Окончание_курса.Командная_разработка.png"
                   alt="GeekBrains.Окончание_курса.Командная_разработка"
@@ -278,16 +278,16 @@
                 <figcaption class="translation">
                   GeekBrains сourse сertificate. Team development.
                 </figcaption>
-              </a>
-            </figure>
+              </figure>
+            </a>
           </li>
           <li class="certificates__gallery--item">
-            <figure>
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="./assets/certificates/GeekBrains.Окончание_курса.Компьютерные_сети.pdf"
-              >
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="./assets/certificates/GeekBrains.Окончание_курса.Компьютерные_сети.pdf"
+            >
+              <figure>
                 <img
                   src="./assets/certificates/GeekBrains.Окончание_курса.Компьютерные_сети.png"
                   alt="GeekBrains.Окончание_курса.Компьютерные_сети"
@@ -295,16 +295,16 @@
                 <figcaption class="translation">
                   GeekBrains сourse сertificate. Computer networks.
                 </figcaption>
-              </a>
-            </figure>
+              </figure>
+            </a>
           </li>
           <li class="certificates__gallery--item">
-            <figure>
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="./assets/certificates/GeekBrains.Окончание_курса.Профессиональная_верстка.pdf"
-              >
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="./assets/certificates/GeekBrains.Окончание_курса.Профессиональная_верстка.pdf"
+            >
+              <figure>
                 <img
                   src="./assets/certificates/GeekBrains.Окончание_курса.Профессиональная_верстка.png"
                   alt="GeekBrains.Окончание_курса.Профессиональная_верстка"
@@ -312,16 +312,16 @@
                 <figcaption class="translation">
                   GeekBrains сourse сertificate. Professional layout.
                 </figcaption>
-              </a>
-            </figure>
+              </figure>
+            </a>
           </li>
           <li class="certificates__gallery--item">
-            <figure>
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="./assets/certificates/GeekBrains.Тестирование.HTML&CSS.Сложный_уровень.pdf"
-              >
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="./assets/certificates/GeekBrains.Тестирование.HTML&CSS.Сложный_уровень.pdf"
+            >
+              <figure>
                 <img
                   src="./assets/certificates/GeekBrains.Тестирование.HTML&CSS.Сложный_уровень.png"
                   alt="GeekBrains.Тестирование.HTML&CSS.Сложный_уровень"
@@ -329,16 +329,16 @@
                 <figcaption class="translation">
                   GeekBrains test сertificate. HTML&CSS. Hard level.
                 </figcaption>
-              </a>
-            </figure>
+              </figure>
+            </a>
           </li>
           <li class="certificates__gallery--item">
-            <figure>
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="./assets/certificates/GeekBrains.Тестирование.JavaScript.Начальный_уровень.pdf"
-              >
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="./assets/certificates/GeekBrains.Тестирование.JavaScript.Начальный_уровень.pdf"
+            >
+              <figure>
                 <img
                   src="./assets/certificates/GeekBrains.Тестирование.JavaScript.Начальный_уровень.png"
                   alt="GeekBrains.Тестирование.JavaScript.Начальный_уровень"
@@ -346,8 +346,8 @@
                 <figcaption class="translation">
                   GeekBrains test сertificate. JavaScript basic.
                 </figcaption>
-              </a>
-            </figure>
+              </figure>
+            </a>
           </li>
         </ul>
       </section>
@@ -503,7 +503,10 @@
         <h2 class="section-title translation">Contacts</h2>
         <ul class="contacts__links">
           <li class="contact__link">
-            <a target="_blank" rel="noopener noreferrer" href="/"
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://linkedin.com/in/elizaveta-kucherova-4808181ab"
               ><img src="./assets/icons/Linkedin.svg" alt="linkedin-logo"
             /></a>
           </li>
